--- a/code/style.css
+++ b/code/style.css
@@ -1,27 +1,122 @@
 html {
-  background: #FFFAFA;
-  color: black
+  background: #5a4041;
+  color: #cdc3a4;
 }
 
-header {
-  background-color: #e646c8;
+/* TEST AND CLEAN UP */
+.logo {
+  color: #cdc3a4;
+  font-family: 'Playfair Display';
+  font-size: 1rem;
 }
 
-.big-news {
-  font-size: 25px;
+.desktop-menu {
+  display: none;
+  text-transform: uppercase;
+  margin-left: 1.5rem;
 }
 
-.daily-news {
-  font-size: 25px;
+.hamburger-menu {
+  display: flex;
+  flex-direction: column;
+}
+
+/* its all hamb.lines now, how do i change it? */
+.menu-line {
+  width: 1.5rem;
+  height: 1px;
+  margin-bottom: 0.5rem;
+  fill: #cdc3a4;
+  background-color: #cdc3a4;
+  margin-left: auto;
+}
+
+.desktop-menu {
+  display: none;
+  text-transform: uppercase;
+  margin-left: auto;
+}
+
+
+.desktop-menu a:hover {
+  color: #5a4041;
+  background-color: #cdc3a4;
+  text-decoration: none;
+}
+
+/* TEST AND CLEAN UP (ABOVE) */
+
+.grid-parent {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  background-color: whitesmoke;
+  gap: 20px;
+  grid-template-rows: 200px 400px 400px 400px 300px;
+}
+
+.grid-item {
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  background-color: #787d68;
+
+}
+
+.grid-one {
+  grid-column: 1 / 9;
+  background-color: #5a4041;
+  color: #cdc3a4;
+  margin-top: 20px;
+  font-family: 'Playfair Display';
+  font-size: 40px;
+}
+
+.sidebar {
+  grid-column: 1 / 3;
+}
+
+.grid-two {
+  grid-column: 3 / 9;
+}
+
+.grid-three {
+  grid-column: 1 / 9;
+}
+
+.grid-four {
+  grid-column: 1 / 3;
+}
+
+.grid-five {
+  grid-column: 3 / 5;
+}
+
+.grid-six {
+  grid-column: 5 / 7;
+}
+
+.grid-seven {
+  grid-column: 7 / 9;
 }
 
 .first-section-box {
   padding: 20px;
-  background-color: rgb(193, 255, 192);
+  background-color: bisque;
+}
+
+.big-news {
+  font-size: 15px;
+  padding: 20px;
+  background-color: #e646c8;
+}
+
+.daily-news {
+  font-size: 15px;
+  padding: 20px;
+  background-color: pink;
 }
 
 .flex-parent {
-  border: 2px solid purple;
   height: 300px;
   display: flex;
   align-items: center;
@@ -39,7 +134,7 @@ header {
 }
 
 .red {
-  background: red;
+  background: #6d5a64;
 }
 
 .blue {
@@ -58,13 +153,11 @@ button {
   border: 1px solid;
   background: snow;
   color: hotpink;
-  font-family: fantasy;
   font-size: 10px;
 }
 
-.grid-item {
-  background: pink;
-}
+
+
 
 
 @media (min-width: 668px) and (max-width: 1024px) {}
