--- a/code/style.css
+++ b/code/style.css
@@ -27,6 +27,8 @@ header {
 header button {
   width: 80px;
   height: 32px;
+  background-color: #0d5758;
+  border-radius: 4rem;
 }
 
 header div {
@@ -114,7 +116,7 @@ div p {
   width: 100%;
   border: 2px solid #0d5758;
   padding: 4px;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   margin: auto;
 }
@@ -189,12 +191,7 @@ div p {
 }
 
 .articles img {
-  /* height: 400px;
-  width: 400px;
-  border-radius: 50%;
-  border: 2px solid #0d5758;
-  padding: 4px;
-  object-fit: cover; */
+
   width: 200px;
   max-width: 100%;
   border: 2px solid #0d5758;
@@ -239,37 +236,45 @@ div p {
 
 /* media queries - for tablet*/
 @media screen and (min-width: 768px) {
-  /* .flex-parent {
+
+  .flex-parent {
     display: flex;
-    width: 1100px;
+    /* width: 1100px; */
+    width: 100%;
     border: 2px solid #0d5758;
     padding: 4px;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     margin: auto;
-  } */
+  }
+
+  .flex-img img {
+    max-width: 100%;
+    object-fit: cover;
+  }
 
   .articles {
     grid-template-columns: repeat(2, 1fr);
   }
+}
 
-  /* media query - for Desktop */
-  @media screen and (min-width: 1024px) {
-    .articles {
-      grid-template-columns: repeat(4, 1fr);
-    }
+/* media query - for Desktop */
+@media screen and (min-width: 1024px) {
+  .articles {
+    grid-template-columns: repeat(4, 1fr);
+  }
 
-    .flex-parent {
-      display: flex;
-      width: 1100px;
-      border: 2px solid #0d5758;
-      padding: 4px;
-      flex-direction: row;
-      justify-content: center;
-      margin: auto;
-    }
+  .flex-parent {
+    display: flex;
+    width: 1100px;
+    border: 2px solid #0d5758;
+    padding: 4px;
+    flex-direction: row;
+    justify-content: center;
+    margin: auto;
   }
 }
+
 
 footer {
   background: #fed376;
