--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,6 @@
 html {
   background: #b6a699;
-  color: #0e0402;
+  color: brown;
 }
 
 h1 {
@@ -10,9 +10,10 @@ h1 {
 
 .grid-parent {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(5, 100px);
-  gap: 30px;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 500px 400px 300px 300px 200px 300px;
+  background-color: pink;
+  gap: 20px;
 }
 
 .grid-item {
@@ -20,11 +21,48 @@ h1 {
 
 }
 
-.big-grid-item {
-  background-color: #0e0402;
-  grid-column: span 4;
+.grid-a {
+  background-color: #c516d1;
+  grid-column: span 6;
 }
 
-.lonely-grid-item {
-  grid-column: span 4
+.grid-b {
+  grid-column: 1 / 4;
+  background-color: hotpink;
+}
+
+.grid-c {
+  grid-column: 4 / 7;
+}
+
+.lonly {
+  grid-column: span 6;
+}
+
+.grid-d {
+  grid-column: 1 / 3;
+}
+
+.grid-e {
+  grid-column: 3 / 5;
+}
+
+.grid-f {
+  grid-column: 5 / 7;
+}
+
+.grid-g {
+  grid-column: span 6;
+}
+
+.grid-h {
+  grid-column: 1 / 3;
+}
+
+.grid-i {
+  grid-column: 3 / 5
+}
+
+.grid-j {
+  grid-column: 5/7
 }
