--- a/code/style.css
+++ b/code/style.css
@@ -2,11 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
   width: 100%;
-  min-height: 100vh;
+  /*min-height: 100vh; */
   display: flex;
   align-items: center;
 }
@@ -14,6 +15,62 @@ body {
 .site-container {
   max-width: 1200px;
   margin: 0 auto;
+}
+
+.nav {
+  height: 100px;
+  width: 100%;
+  background-color: lightseagreen;
+  position: relative;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: space-between;
+}
+
+.nav-header {
+  display: inline;
+}
+
+.nav-title {
+  display: inline-block;
+  font-size: 22px;
+  color: #fff;
+  padding: 10px 10px 10px 10px;
+}
+
+.nav-btn {
+  display: none;
+}
+
+.nav-links {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 18px;
+}
+
+.nav-links a {
+  display: inline-block;
+  padding: 13px 10px 13px 10px;
+  text-decoration: none;
+  color: #efefef;
+}
+
+.nav-links a:hover {
+  color: black;
+}
+
+.nav > #nav-check {
+  display: none;
+}
+
+@media (max-width: 1024px) {
+}
+/**/
+a {
+  text-decoration: none;
+  color: white;
 }
 
 .logo {
@@ -26,49 +83,33 @@ ul {
 }
 
 /* Upper navbar */
-.upper-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.title-logo img {
   padding: 0.5rem 0.5rem 0 0.5rem;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-color: lightseagreen;
-  color: white;
 }
 
 .title-logo {
   display: flex;
   align-items: center;
   gap: 0 1rem;
-}
-
-.top-nav-links {
-  display: flex;
-  align-items: center;
-  gap: 1.5rem;
-  cursor: pointer;
-}
-
-.top-nav-links li:hover {
-  color: grey;
+  color: white;
 }
 
 .site-title {
   display: flex;
   justify-content: center;
+  cursor: pointer;
 }
 
 /* Lower navbar */
-.site-nav {
+.trending-nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 0;
   background-color: black;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.nav-menu {
+.trending-nav-menu {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -76,8 +117,7 @@ ul {
   width: 100%;
 }
 
-.nav-menu-items {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+.trending-nav-menu-items {
   font-size: 14px;
   font-weight: 400;
   color: white;
@@ -85,15 +125,20 @@ ul {
   align-items: center;
 }
 
-.nav-menu-items:hover {
+.trending-nav-menu-items:hover {
   cursor: pointer;
-  color: black;
+  color: lightseagreen;
 }
 
 .trending {
   font-weight: 700;
   color: lightseagreen;
   margin-right: 1rem;
+  cursor: default;
+}
+
+.trending:hover {
+  cursor: default;
 }
 
 .search-box {
@@ -150,14 +195,14 @@ ul {
   font-size: 2.5rem;
   width: 300px;
   text-transform: capitalize;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  cursor: pointer;
 }
 
 .big-news__text-bread {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  cursor: pointer;
 }
 
 .big-news-bread {
@@ -179,8 +224,7 @@ ul {
 
 .latest-header {
   font-size: 1.8rem;
-  color: beige;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: white;
 }
 
 .latest-header::after {
@@ -189,7 +233,7 @@ ul {
   display: flex;
   width: 50%;
   height: 1px;
-  background-color: beige;
+  background-color: white;
 }
 
 .latest-news__articles {
@@ -203,7 +247,6 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .latest-article::after {
@@ -212,7 +255,7 @@ ul {
   display: flex;
   width: 50%;
   height: 1px;
-  background-color: beige;
+  background-color: white;
 }
 
 .latest-article:last-child::after {
@@ -220,29 +263,33 @@ ul {
 }
 
 .latest-article__title {
-  color: beige;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: white;
+  cursor: pointer;
 }
 
 .latest-article__content {
-  color: beige;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: white;
+  cursor: pointer;
 }
 
-.zoom-img {
+.big-news__image {
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center;
+  width: auto;
   overflow: hidden;
-  max-width: 800px;
-  height: 400px;
+  max-width: fit-content;
+  height: auto;
 }
 
-.zoom-img img {
+.big-news__image img {
+  width: auto;
   height: 400px;
-  width: 800px;
-  object-fit: cover;
+  max-width: fit-content;
   transition: 0.5s all ease-in-out;
 }
 
-.zoom-img img:hover {
+.big-news__image img:hover {
   transform: scale(1.2);
   cursor: pointer;
 }
@@ -255,7 +302,7 @@ ul {
   justify-content: space-between;
   font-size: 1rem;
   font-weight: 500;
-  margin-bottom: 2rem;
+  padding-bottom: 3rem;
 }
 
 .small-news__article {
@@ -263,29 +310,18 @@ ul {
   flex-direction: column;
   height: fit-content;
   width: 250px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .small-news__title {
   margin-bottom: 0.5rem;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   cursor: pointer;
 }
 
 .small-news__category {
   margin: 0.5rem 0;
   color: grey;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   cursor: pointer;
 }
-
-/* .small-news__text {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin-left: 1rem;
-  height: 127px;
-} */
 
 .small-news__image img:hover {
   transform: scale(1.2);
@@ -308,14 +344,349 @@ ul {
   transform: scale(1.2);
   cursor: pointer;
 }
-
-@media only screen and (max-width: 720px) {
-  .big-news {
-    display: column;
+@media screen and (max-width: 480px) {
+  .nav {
+    display: flex;
+    justify-content: center;
   }
-  .big-news a {
-    text-decoration: none;
-    color: orange;
-    display: column;
+  .nav > .nav-btn {
+    display: inline-block;
+    justify-content: center;
+    position: absolute;
+    right: 0px;
+    top: 1.2rem;
+  }
+  .nav > .nav-btn > label {
+    display: inline-block;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    padding: 13px;
+  }
+  .nav > .nav-btn > label:hover,
+  .nav #nav-check:checked ~ .nav-btn > label {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+  .nav > .nav-btn > label > span {
+    display: block;
+    width: 25px;
+    height: 10px;
+    border-top: 2px solid #eee;
+  }
+  .nav > .nav-links {
+    position: absolute;
+    display: block;
+    width: 100%;
+    background-color: darkslategray;
+    height: 0px;
+    transition: all 0.3s ease-in;
+    overflow-y: hidden;
+    top: 50px;
+    left: 0px;
+  }
+  .nav > .nav-links > a {
+    display: block;
+    width: 100%;
+  }
+  .nav > .nav-links a:hover {
+    width: 100%;
+    background-color: orange;
+  }
+  .nav > #nav-check:not(:checked) ~ .nav-links {
+    height: 0px;
+  }
+  .nav > #nav-check:checked ~ .nav-links {
+    height: calc(100vh - 50px);
+    overflow-y: auto;
+  }
+  .trending-nav {
+    display: none;
+  }
+
+  .search-box {
+    display: none;
+  }
+
+  .page-container {
+    padding-inline: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+  }
+
+  .big-news {
+    width: 100%;
+    border: 2px solid orange;
+  }
+
+  .big-news__article {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .big-news__text-title,
+  .big-news-bread {
+    width: 100%;
+  }
+
+  .big-news__image {
+    border: 2px solid red;
+    height: auto;
+    width: auto;
+    max-width: fit-content;
+  }
+  .big-news__image img {
+    height: auto;
+    width: 100%;
+    max-width: fit-content;
+  }
+  /* .small-news {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+    padding: 20px;
+  } */
+
+  .small-news {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .small-news__article {
+    border: 1px solid red;
+    width: 50%;
+    gap: 2rem;
+  }
+
+  .small-news-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .small-news__category {
+    font-size: 18px;
+  }
+
+  .small-news__title {
+    font-size: 2rem;
+  }
+
+  .small-news__text {
+    font-size: 1.2rem;
+  }
+
+  .small-news__image {
+    height: auto;
+    width: auto;
+    max-width: fit-content;
+  }
+  .small-news__image img {
+    width: 100%;
+    max-width: fit-content;
+  }
+}
+
+/*@media screen and (max-width: 769px) { */
+@media (min-width: 481px) and (max-width: 768px) {
+  .nav {
+    display: flex;
+    justify-content: center;
+  }
+  .nav > .nav-btn {
+    display: inline-block;
+    justify-content: center;
+    position: absolute;
+    right: 0px;
+    top: 1.2rem;
+  }
+  .nav > .nav-btn > label {
+    display: inline-block;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    padding: 13px;
+  }
+  .nav > .nav-btn > label:hover,
+  .nav #nav-check:checked ~ .nav-btn > label {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+  .nav > .nav-btn > label > span {
+    display: block;
+    width: 25px;
+    height: 10px;
+    border-top: 2px solid #eee;
+  }
+  .nav > .nav-links {
+    position: absolute;
+    display: block;
+    width: 100%;
+    background-color: darkslategray;
+    height: 0px;
+    transition: all 0.3s ease-in;
+    overflow-y: hidden;
+    top: 50px;
+    left: 0px;
+  }
+  .nav > .nav-links > a {
+    display: block;
+    width: 100%;
+  }
+  .nav > .nav-links a:hover {
+    width: 100%;
+    background-color: orange;
+  }
+  .nav > #nav-check:not(:checked) ~ .nav-links {
+    height: 0px;
+  }
+  .nav > #nav-check:checked ~ .nav-links {
+    height: calc(100vh - 50px);
+    overflow-y: auto;
+  }
+  .trending-nav {
+    display: none;
+  }
+
+  .search-box {
+    display: none;
+  }
+
+  .page-container {
+    padding-inline: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+  }
+
+  .big-news {
+    width: 100%;
+    border: 2px solid orange;
+  }
+
+  .big-news__article {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .big-news__text-title,
+  .big-news-bread {
+    width: 100%;
+  }
+
+  .big-news__image {
+    border: 2px solid red;
+    height: auto;
+    width: auto;
+    max-width: fit-content;
+  }
+  .big-news__image img {
+    height: auto;
+    width: 100%;
+    max-width: fit-content;
+  }
+  /* .small-news {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  } */
+  .small-news {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+    padding: 20px;
+  }
+
+  .small-news__article {
+    border: 1px solid red;
+    width: 100%;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .small-news-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  /* .small-news__article {
+    width: 100%;
+    flex-direction: row;
+    gap: 2rem;
+  }
+
+  .small-news-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  } */
+
+  .small-news__category {
+    font-size: 18px;
+  }
+
+  .small-news__title {
+    font-size: 2rem;
+  }
+
+  .small-news__text {
+    font-size: 1.2rem;
+  }
+
+  .small-news__image {
+    height: auto;
+    width: auto;
+    max-width: fit-content;
+  }
+  .small-news__image img {
+    height: auto;
+    width: 100%;
+    max-width: fit-content;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .small-news {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+    padding: 20px;
+  }
+
+  .small-news__article {
+    border: 1px solid red;
+    width: 100%;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .small-news-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .small-news__category {
+    font-size: 18px;
+  }
+
+  .small-news__title {
+    font-size: 2rem;
+  }
+
+  .small-news__text {
+    font-size: 1.2rem;
+  }
+
+  .small-news__image {
+    height: auto;
+    width: auto;
+    max-width: fit-content;
+  }
+  .small-news__image img {
+    height: auto;
+    width: 100%;
+    max-width: fit-content;
   }
 }
