--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,120 @@
-html {
-  background: #0025ff;
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
+  padding: 20px;
   color: #fff;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+}
+
+nav li {
+  margin-left: 20px;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.2s;
+}
+
+nav a:hover {
+  color: #f6ff00;
+}
+
+h1 {
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.main {
+  padding: 20px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.big-news {
+  background-color: #f6ff00;
+  padding: 20px;
+  color: #333;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.news-grid {
+  display: grid;
+  grid-gap: 20px;
+  padding: 20px;
+}
+
+.card {
+  background-color: #f0f0f0;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (min-width: 1024px) {
+  .container {
+      flex-direction: column;
+  }
+  .big-news {
+      flex: 1;
+  }
+  .news-grid {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .news-grid {
+      grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .news-grid {
+      grid-template-columns: 1fr;
+  }
+}
+
+.logo {
+  width: 20%;
+  height: auto;
+}
+
+.news-image {
+  border: none;
+  width: 100%;
+  height: auto;
+}
+
+.continue-reading-button {
+  background-color: #909090;
+  color: #fff;
+  padding: 20px 20px;
+  border: none;
+  border-radius: 35px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.continue-reading-button:hover {
+  background-color: #0000ff;
 }
