--- a/code/style.css
+++ b/code/style.css
@@ -5,28 +5,148 @@ html {
 
 
 
-ul {
-  list-style-type: none;
+/* UTILITIES */
+* {
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  background-color: #333;
+  box-sizing: border-box;
 }
 
-li {
-  float: left;
+body {
+  font-family: 'Playfair Display';
 }
 
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
+/* gjelder hele */
+
+a {
   text-decoration: none;
 }
 
-li a:hover {
-  background-color: #111;
+li {
+  list-style: none;
+}
+
+/* NAVBAR ink lines farge STYLING STARTS */
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 30px;
+  background-color: #606453;
+  color: #cdc3a4;
+}
+
+/* NAVBAR links (words) STARTS */
+.nav-links a {
+  color: #cdc3a4;
+}
+
+/* LOGO */
+.logo {
+  font-size: 32px;
+  color: #fff;
+}
+
+/* NAVBAR MENU */
+.menu {
+  display: flex;
+  gap: 1em;
+  font-size: 18px;
+}
+
+.menu li:hover {
+  background-color: #787d68;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+
+.menu li {
+  padding: 5px 14px;
+}
+
+/* DROPDOWN MENU */
+.services {
+  position: relative;
+}
+
+.dropdown {
+  background-color: hotpink;
+  padding: 1em 0;
+  position: absolute;
+  /*WITH RESPECT TO PARENT*/
+  display: none;
+  border-radius: 8px;
+  top: 35px;
+}
+
+/*element class dropdown*/
+.dropdown li+li {
+  margin-top: 10px;
+}
+
+.dropdown li {
+  padding: 0.5em 1em;
+  width: 8em;
+  text-align: center;
+}
+
+.dropdown li:hover {
+  background-color: yellows;
+}
+
+/*element class services*/
+
+.services:hover .dropdown {
+  display: block;
+}
+
+/* RESPONSIVE NAVBAR MENU STARTS */
+
+/* CHECKBOX HACK */
+
+input[type=checkbox] {
+  display: none;
+}
+
+/* HAMBURGER MENU (element class hamburg)*/
+.hamburger {
+  display: none;
+  font-size: 24px;
+  user-select: none;
+}
+
+/* APPLYING MEDIA QUERIES */
+@media (max-width: 768px) {
+  .menu {
+    display: none;
+    position: absolute;
+    background-color: #606453;
+    right: 0;
+    left: 0;
+    text-align: center;
+    padding: 16px 0;
+  }
+
+  .menu li:hover {
+    display: inline-block;
+    background-color: pink;
+    transition: 0.3s ease;
+  }
+
+  .menu li+li {
+    margin-top: 12px;
+  }
+
+  /*element class meny stop */
+  input[type=checkbox]:checked~.menu {
+    display: block;
+  }
+
+  .hamburger {
+    display: block;
+  }
+
+
 }
 
 
@@ -36,7 +156,7 @@ li a:hover {
 
 
 
-/* TEST AND CLEAN UP (ABOVE) */
+
 
 /*GRID STARTS HERE*/
 .grid-parent {
@@ -57,7 +177,7 @@ li a:hover {
   grid-column: span 8;
   background-color: #787d68;
   color: #cdc3a4;
-  margin-top: 60px;
+  margin-top: 100px;
   font-family: 'Playfair Display';
   font-size: 40px;
 }
@@ -74,6 +194,7 @@ li a:hover {
 .grid-three {
   grid-column: 1 / 9;
   background-color: #cdc3a4;
+  color: white;
 }
 
 .grid-four {
@@ -100,27 +221,36 @@ li a:hover {
 
 /*GRID STOPS HERE*/
 
+/*footer*/
+
 footer {
-  background-color: #212121;
+  background-color: #606453;
   padding: 5rem 1.5rem;
 }
 
 
 li {
-  font-family: Arial;
   text-transform: uppercase;
 }
 
+/*hva er det over*/
 
 ul {
-  color: black;
+  list-style-type: none;
   margin: 0;
-  display: flex;
-  flex-direction: row;
   padding: 0;
-  align-items: center;
-  justify-content: space-evenly;
+  overflow: hidden;
+  background-color: #606453;
 }
+
+li a:footer {
+  background-color: #787d68;
+  text-decoration: none;
+}
+
+/*footer above*/
+
+
 
 .first-section-box {
   padding: 20px;
