--- a/code/style.css
+++ b/code/style.css
@@ -3,59 +3,124 @@ html {
   color: brown;
 }
 
-/*START OF HEADER*/
-ul {
-  list-style-type: none;
+/* UTILITIES */
+* {
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  background-color: #333;
+  box-sizing: border-box;
 }
 
-li {
-  float: left;
+body {
+  font-family: cursive;
 }
 
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
+a {
   text-decoration: none;
 }
 
-li a:hover {
-  background-color: #111;
+li {
+  list-style: none;
+}
+
+/* NAVBAR STYLING STARTS */
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: teal;
+  color: #fff;
+}
+
+.nav-links a {
+  color: #fff;
+}
+
+/* LOGO */
+.logo {
+  font-size: 32px;
+}
+
+/* NAVBAR MENU */
+.menu {
+  display: flex;
+  gap: 1em;
+  font-size: 18px;
+}
+
+.menu li:hover {
+  background-color: #4c9e9e;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+
+.menu li {
+  padding: 5px 14px;
+}
+
+/* RESPONSIVE NAVBAR MENU STARTS */
+
+/* CHECKBOX HACK */
+
+input[type=checkbox] {
+  display: none;
+}
+
+/* HAMBURGER MENU */
+.hamburger {
+  display: none;
+  font-size: 24px;
+  user-select: none;
+}
+
+/* APPLYING MEDIA QUERIES */
+@media (max-width: 768px) {
+  .menu {
+    display: none;
+    position: absolute;
+    background-color: teal;
+    right: 0;
+    left: 0;
+    text-align: center;
+    padding: 16px 0;
+  }
+
+  .menu li+li {
+    margin-top: 12px;
+  }
+
+  input[type=checkbox]:checked~.menu {
+    display: block;
+  }
+
+  .hamburger {
+    display: block;
+  }
+
 }
 
 /*END OF HEADER*/
 
-h1 {
-  color: #0e0402;
-  font-size: 40px;
-}
+/*START OF GRID*/
 
 .grid-parent {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: 500px 400px 300px 300px 200px 300px;
-  background-color: pink;
+  background-color: #fff;
   gap: 20px;
 }
 
 .grid-item {
-  background: white;
-
+  background-color: rgb(240, 172, 78);
 }
 
 .grid-a {
-  background-color: white;
   grid-column: span 6;
 }
 
 .grid-b {
   grid-column: 1 / 4;
-  background-color: white;
 }
 
 .grid-c {
@@ -68,14 +133,6 @@ h1 {
 
 .grid-d {
   grid-column: 1 / 3;
-  width: fit-content;
-  margin-bottom: 1em;
-}
-
-.img3 {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
 }
 
 .grid-e {
@@ -95,12 +152,15 @@ h1 {
 }
 
 .grid-i {
-  grid-column: 3 / 5
+  grid-column: 3 / 5;
 }
 
 .grid-j {
-  grid-column: 5/7
+  grid-column: 5 / 7;
 }
+
+
+
 
 
 /*FOOTER*/
