cant figure out media

--- a/code/style.css
+++ b/code/style.css
@@ -3,30 +3,22 @@ html {
   color: #cdc3a4;
 }
 
-
-
-/* UTILITIES */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
+/* gjelder hele, må bytte */
 body {
   font-family: 'Playfair Display';
 }
 
-/* gjelder hele */
-
+/*linje top og bunn utenom instagram*/
 a {
-  text-decoration: none;
+  text-decoration: overline;
 }
 
+/*tall ol foran link2 og 3*/
 li {
-  list-style: none;
+  list-style: circle;
 }
 
-/* NAVBAR ink lines farge STYLING STARTS */
+/* NAVBAR ink hamb-linj farge STYLING STARTS */
 .navbar {
   display: flex;
   align-items: center;
@@ -41,74 +33,46 @@ li {
   color: #cdc3a4;
 }
 
-/* LOGO */
+/* LOGO BoE */
 .logo {
-  font-size: 32px;
+  font-size: 38px;
   color: #fff;
 }
 
-/* NAVBAR MENU */
+/* NAVBAR MENU PC linje rundt alle tre ord */
 .menu {
   display: flex;
-  gap: 1em;
+  gap: 2em;
   font-size: 18px;
 }
 
+/* NAVBAR MENU PC linje rundt hvert enkelt ord */
+.menu li {
+  padding: 5px 14px;
+}
+
+/* NAVBAR MENU PC hover rundt bokstaver ord */
 .menu li:hover {
   background-color: #787d68;
   border-radius: 5px;
   transition: 0.3s ease;
 }
 
-.menu li {
-  padding: 5px 14px;
-}
-
-/* DROPDOWN MENU */
-.services {
-  position: relative;
-}
-
-.dropdown {
-  background-color: hotpink;
-  padding: 1em 0;
-  position: absolute;
-  /*WITH RESPECT TO PARENT*/
-  display: none;
-  border-radius: 8px;
-  top: 35px;
-}
-
-/*element class dropdown*/
-.dropdown li+li {
-  margin-top: 10px;
-}
-
-.dropdown li {
-  padding: 0.5em 1em;
-  width: 8em;
-  text-align: center;
-}
-
-.dropdown li:hover {
-  background-color: yellows;
-}
-
-/*element class services*/
-
-.services:hover .dropdown {
-  display: block;
+/* UTILITIES dropdown box size */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* RESPONSIVE NAVBAR MENU STARTS */
 
-/* CHECKBOX HACK */
-
+/* CHECKBOX HACK chekboks not visible */
 input[type=checkbox] {
   display: none;
 }
 
-/* HAMBURGER MENU (element class hamburg)*/
+/* HAMBURGER MENU (makes the hamburger non visible in the PC version)*/
 .hamburger {
   display: none;
   font-size: 24px;
@@ -117,6 +81,9 @@ input[type=checkbox] {
 
 /* APPLYING MEDIA QUERIES */
 @media (max-width: 768px) {
+
+
+  /* mobile version: hides the written menu*/
   .menu {
     display: none;
     position: absolute;
@@ -127,26 +94,26 @@ input[type=checkbox] {
     padding: 16px 0;
   }
 
-  .menu li:hover {
-    display: inline-block;
-    background-color: pink;
-    transition: 0.3s ease;
-  }
-
+  /*mobile version: space between written menu in downdrop hamburger bar*/
   .menu li+li {
-    margin-top: 12px;
+    margin-top: 20px;
   }
 
-  /*element class meny stop */
+  /*mobile version downdrop menu (inkl farge) */
   input[type=checkbox]:checked~.menu {
     display: block;
   }
 
+  /*mobile version box around hamburger inkl color */
   .hamburger {
     display: block;
   }
 
-
+  @media (min-width: 600px) {
+    .grid-item {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
 }
 
 
@@ -179,7 +146,12 @@ input[type=checkbox] {
   color: #cdc3a4;
   margin-top: 100px;
   font-family: 'Playfair Display';
-  font-size: 40px;
+  ;
+}
+
+h1 {
+  font-weight: 100;
+  font-size: 6vw;
 }
 
 .sidebar {
@@ -193,8 +165,6 @@ input[type=checkbox] {
 
 .grid-three {
   grid-column: 1 / 9;
-  background-color: #cdc3a4;
-  color: white;
 }
 
 .grid-four {
@@ -301,6 +271,8 @@ button {
   padding: 10px 20px;
   border: 1px solid;
   background: snow;
-  color: hotpink;
+  color: #ff69b4;
   font-size: 10px;
 }
+
+@media screen and (max-width: 646px) {
