--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,165 @@
-html {
-  background: #0025ff;
-  color: #fff;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+body {
+  display: flex;
+  flex-direction: column;
+  font-family: 'inter', sans-serif;
+  margin: 0;
+  background: linear-gradient(90deg, #ffb3e3, #9d9dff);
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1rem;
+}
+
+header {
+  background-color: #ffffff7a;
+  color: #000000;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.header-logo {
+  font-size: 2rem;
+}
+
+.header-title {
+  font-size: 2rem;
+  font-weight: bold;
+  background: linear-gradient(90deg, #ff76cc, #6869ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+}
+
+nav a {
+  color: #000000;
+  text-decoration: none;
+  margin: 0 15px;
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
+
+.hamburger-menu {
+  display: none;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+
+@media (max-width: 1024px) {
+.header-logo {
+  display: none;
+}
+}
+
+@media only screen and (max-width: 640px) {
+  nav {
+    display: none;
+    flex-direction: column;
+    background-color: #fffcfc7a;
+    color: #000000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+  }
+
+  .header-logo {
+    display: none;
+  }
+  
+  nav.active {
+    display: flex;
+  }
+  
+  .hamburger-menu {
+    display: block;
+  }
+}
+
+
+.big-news-container {
+  display: flex;
+  flex-direction: row;
+  margin: 20px;
+  background-color: #ffffff7a;
+  border-radius: 10px;
+  padding: 20px;
+  gap: 20px;
+}
+
+.big-news-img {
+  max-width: 50%;
+  height: auto;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.big-news-paragraph {
+  font-size: 1.5rem;
+}
+
+@media only screen and (max-width: 640px)  {
+  .big-news-container {
+    flex-direction: column;
+
+    
+  .big-news-img {
+      max-width: 100%;
+    }    
+  }
+}
+
+.other-news-container {
+  margin: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 4 articles in a row on desktop */
+  gap: 20px;
+}
+
+.other-news-content {
+  background-color: #ffffff7a;
+  border-radius: 10px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.other-news-img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+
+@media (max-width: 1024px) {
+  .other-news-container {
+    grid-template-columns: repeat(2, 1fr); 
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .other-news-container {
+    grid-template-columns: 1fr; 
+  }
 }
