--- a/code/style.css
+++ b/code/style.css
@@ -113,7 +113,50 @@ input[type=checkbox] {
 
 
 
+/*footer*/
 
+footer {
+  background-color: #606453;
+  padding: 5rem 1.5rem;
+}
+
+
+li {
+  text-transform: uppercase;
+}
+
+/*hva er det over*/
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #606453;
+  display: flex;
+  gap: 2em;
+  font-size: 18px;
+  color: #cdc3a4;
+}
+
+li a:footer {
+  background-color: #787d68;
+  text-decoration: none;
+}
+
+/*farge link og under er hover*/
+li a {
+  color: #cdc3a4;
+  text-decoration: overline;
+}
+
+li:hover {
+  background-color: #787d68;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+
+/*footer above*/
 
 
 
@@ -133,7 +176,23 @@ input[type=checkbox] {
   font-size: 30px;
   text-align: center;
   background-color: WHITE;
+  border: 1px solid #ccc;
+  padding: 10px;
+  overflow: hidden;
+  display: flex;
+  /* Optional: to center content within the item */
+  flex-direction: column;
+  /* Optional: to stack content vertically */
+  align-items: center;
+  /* Optional: to horizontally center content */
+  /* Prevent content overflow */
 }
+
+/* If you want to add scrollbars when content overflows */
+.grid-item.scrollable {
+  overflow: auto;
+}
+
 
 .grid-one {
   grid-column: span 8;
@@ -152,6 +211,18 @@ h1 {
 .sidebar {
   grid-column: 1 / 3;
   border-style: solid;
+}
+
+
+.sidebar-image {
+  /* No need to specify grid-column here */
+  max-width: 100%;
+  height: auto;
+}
+
+.sidebar-text {
+  /* This text is in column 1 */
+  /* Additional styles for the text */
 }
 
 .grid-two {
@@ -186,37 +257,6 @@ h1 {
 
 /*GRID STOPS HERE*/
 
-/*footer*/
-
-footer {
-  background-color: #606453;
-  padding: 5rem 1.5rem;
-}
-
-
-li {
-  text-transform: uppercase;
-}
-
-/*hva er det over*/
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #606453;
-}
-
-li a:footer {
-  background-color: #787d68;
-  text-decoration: none;
-}
-
-/*footer above*/
-
-
-
 .first-section-box {
   padding: 20px;
   background-color: bisque;
@@ -233,7 +273,7 @@ li a:footer {
 }
 
 .flex-parent {
-  height: 300px;
+  height: fill;
   display: flex;
   justify-content: center;
 }
