--- a/code/style.css
+++ b/code/style.css
@@ -2,3 +2,60 @@ html {
   background: #fafade;
   color: #fff;
 }
+.top-heading {
+  color: #2c663b;
+  font-size: 50px;
+  padding: 5px;    
+}
+.big-news {
+  color:#2c663b;
+  background-color: #ebe6ae;
+  font-size: 20px;
+  padding: 10px;     
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+.big-news img {
+  width: 100%;
+}
+.flex-parent {        
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;      
+}
+.flex-child {
+  margin: 5px;    
+  border-radius: 5px;
+  padding: 5px;
+  width: 200px;
+  height: 200px;       
+}
+.red {
+  color:#2c663b; 
+  background-color: #ebe6ae;
+}
+.red img {
+  width: 90%
+}
+.pink {
+  color:#2c663b;
+  background-color: #ebe6ae;
+}
+.pink img {
+  width: 90%;
+}
+.green {
+  color:#2c663b;
+  background-color: #ebe6ae;
+}
+.green img {
+  width: 90%;
+}
+.purple {
+  color:#2c663b;
+  background-color: #ebe6ae;          
+}
+.purple img {
+  width: 95%;
+}
