--- a/code/style.css
+++ b/code/style.css
@@ -1,16 +1,45 @@
 html {
-  background: #fafade;
-  color: #fff;
+  background: #fafade;  
 }
-.top-heading {
-  color: #2c663b;
-  font-size: 50px;
-  padding: 5px;    
+{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+}
+li {
+  list-style: none;
+}
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #fafade;
+  color: #30302c;         
+}
+.nav-links a {
+  color: #30302c;
+}
+.menu {
+  display: flex;
+  gap: 1em;
+  font-size: 18px;
+}
+.menu li:hover {
+  background-color: #ebe6ae;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+.menu li {
+  padding: 5px 14px;
 }
 .big-news {
-  color:#2c663b;
+  color:#30302c;
   background-color: #ebe6ae;
-  font-size: 20px;
+  font-size: 15px;
   padding: 10px;     
   border-radius: 5px;
   margin-bottom: 10px;
@@ -32,30 +61,36 @@ html {
   height: 200px;       
 }
 .red {
-  color:#2c663b; 
+  color:#30302c; 
   background-color: #ebe6ae;
 }
 .red img {
   width: 90%
 }
 .pink {
-  color:#2c663b;
+  color:#30302c;
   background-color: #ebe6ae;
 }
 .pink img {
   width: 90%;
 }
 .green {
-  color:#2c663b;
+  color:#30302c;
   background-color: #ebe6ae;
 }
 .green img {
   width: 90%;
 }
 .purple {
-  color:#2c663b;
+  color:#30302c;
   background-color: #ebe6ae;          
 }
 .purple img {
   width: 95%;
+}
+footer {
+  text-align: center;  
+  background-color: #fafade;
+  color: #30302c;
+  font-size: 10px;
 }
